# gmail-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_local.py
src/: __init__.py  _client.py  gmail.py  main.py  server.py  smoke.py
tools/: __init__.py
